--- a/index.html
+++ b/index.html
@@ -1,69 +1,67 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" >
-<link rel="stylesheet" href="./style.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="./style.css" />
     <title>Currency Converter</title>
   </head>
   <body>
-
-
-
-
-<nav class="navbar navbar-dark bg-danger">  
-  <div class="container justify-content-center">
-    <a href="" class="navbar-brand">Currency Converter</a>
-  </div>
-</nav>
-
-<div class="containe "> 
-  <div class="row justify-content-center">
-    <div class="col-sm-6">
-
-      <div class="form-group">
-        <select  id="currency_one" class="custom-select">
-          <option > Select Currency</option>
-        </select>
+    <nav class="navbar navbar-dark bg-danger">
+      <div class="container justify-content-center">
+        <a href="" class="navbar-brand">Currency Converter</a>
       </div>
-      
-      <div class="form-group">
-        <select  id="currency_two" class="custom-select">
-          <option > Select Currency</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <input type="number" id="amount" class="form-control" placeholder=" Enter Amount">
-      </div>
-      <button class="btn btn-primary" id="btn-converter"> Converter</button>
-      <div class="text-danger text-center mt-3" id="result">
+    </nav>
 
-        10 $ = 88 try 
-      </div>
+    <div class="containe">
+      <div class="row justify-content-center">
+        <div class="col-sm-6">
+          <div class="form-group">
+            <select id="currency_one" class="custom-select">
+              <option>Select Currency</option>
+            </select>
+          </div>
 
+          <div class="form-group">
+            <select id="currency_two" class="custom-select">
+              <option>Select Currency</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <input
+              type="number"
+              id="amount"
+              class="form-control"
+              placeholder=" Enter Amount"
+            />
+          </div>
+          <button class="btn btn-primary" id="btn-converter">Converter</button>
+          <div id="loading"><img id="lgif" src="./loading.gif" alt="" /></div>
+          <div class="text-danger text-center mt-3" id="result">
+            10 $ = 88 TRY
+          </div>
+          <div class="dates">
+            <div id="hour"></div>
+            <div id="date"></div>
+            <hr />
+          </div>
+        </div>
+      </div>
     </div>
 
-</div>
-</div>
-
-
-
-
-
-
-
-
-
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" ></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-     <script src="./app.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" ></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" ></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" ></script>
-
+    <script src="./app.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
